--- a/report/decision_analytic/mdm/latex/main_manuscript.tex
+++ b/report/decision_analytic/mdm/latex/main_manuscript.tex
@@ -17,18 +17,20 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 \DeclareMathOperator{\argmax}{arg\,max}
 
-\def\volumeyear{2016}
+\def\volumeyear{2018}
 
 \begin{document}
 
-\runninghead{Au Thor, and Aut Hor}
+\runninghead{Tomer et al.}
 
-\title{Personalized Decision Making for Prostate Cancer Biopsies in Active Surveillance Programs}
+\title{Personalized Decision Making for Biopsies in Prostate Cancer Active Surveillance Programs}
 
-\author{Au Thor\affilnum{1} and Aut Hor\affilnum{2}}
+\author{Anirudh Tomer\affilnum{1}, Daan~Nieboer\affilnum{2}, Monique~J.~Roobol\affilnum{3}, Ewout~W.~Steyerberg\affilnum{2,4}, and Dimitris~Rizopoulos\affilnum{1}}
 
 \affiliation{\affilnum{1}Department of Biostatistics, Erasmus University Medical Center, the Netherlands\\
-\affilnum{2}Department of XXXX, XXX XXXX XXXX  XXXX, the Netherlands}
+\affilnum{2}Department of Public Health, Erasmus University Medical Center, the Netherlands\\
+\affilnum{3}Department of Urology, Erasmus University Medical Center, the Netherlands\\
+\affilnum{4}Department of Medical Statistics and Bioinformatics, Leiden University Medical Center, The Netherlands}
 
 \corrauth{Anirudh Tomer, 
 Erasmus MC,
@@ -45,7 +47,7 @@ the Netherlands.}
 
 \maketitle
 
-\footnote{Financial support for this study was provided Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The funding agreement ensured the authors’ independence in designing the study, interpreting the data, writing, and publishing the report.}
+\footnote{Financial support for this study was provided Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The funding agreement ensured the authors’ independence in designing the study, interpreting the data, writing, and publishing the report.\\Word Count: 4046}
 \thefootnote
 
 \input{mainmatter/introduction}
@@ -57,7 +59,7 @@ the Netherlands.}
 
 \begin{sm}
 Supplementary material for this article are available after references and figures in this document.
-\end{sm}
+\end{sm} 
 
 \bibliographystyle{SageV}
 \bibliography{bibliography.bib}
