--- a/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
@@ -2,14 +2,14 @@
 
 \section{Discussion}
 \label{sec:discussion}
-Prostate cancer active surveillance (AS) programs schedule biopsies for patients to detect cancer progression. Biopsies are burdensome and hence each biopsy counts. However, currently there is no consensus on the best time interval for subsequent repeat biopsies \cite{loeb2014heterogeneity}. In order to reduce the delay in detection of cancer progression many AS programs schedule biopsies annually which leads to many unnecessary biopsies for slowly progressing patients. The world's largest AS program PRIAS attempts to identify these patients using their prostate-specific antigen (PSA) profile. However, despite their methodology, compliance for biopsies is low. With an aim to better balance the burden of biopsies on patients and the delay in detection of cancer patients, in this article, we presented a methodology for personalizing the biopsy decision making process in AS programs.
+Prostate cancer active surveillance (AS) programs schedule biopsies for patients to detect cancer progression. Biopsies are burdensome and hence each biopsy counts. However, currently there is no consensus on the best time interval for subsequent repeat biopsies \cite{loeb2014heterogeneity}. In order to reduce the delay in detection of cancer progression many AS programs schedule biopsies annually which leads to many unnecessary biopsies for slowly progressing patients. The world's largest AS program PRIAS attempts to identify these patients using their prostate-specific antigen (PSA) profile. However, despite their methodology, compliance for biopsies is low \citep{bokhorst2015compliance}. With an aim to better balance the burden of biopsies on patients and the delay in detection of cancer patients, in this article, we presented a methodology for personalizing the biopsy decision making process in AS programs.
 
-Our methodology utilizes joint models for time‐to‐event and longitudinal data. While, existing approaches for scheduling biopsies either discard information from PSA and digital rectal examination (DRE), or use crude measures such as PSA doubling time. In contrast, our proposed methodology makes a separate decision for each patient at each follow-up visit on the basis of finer measures such as patient specific instantaneous PSA value, PSA velocity, probability of having DRE larger than level T1c, and results from the previous biopsies. Our method combines the aforementioned measures into a patient and visit specific cancer progression risk function. It schedules a biopsy if the risk of cancer progression crosses a certain threshold. We compared our approach with the existing annual and PRIAS schedules, by conducting a realistic and extensive simulation study, for a 10 year follow-up period.
+Our methodology utilizes joint models for time-to-event and longitudinal data. Existing approaches for scheduling biopsies either discard information from PSA and digital rectal examination (DRE), or use crude measures such as PSA doubling time. In contrast, our proposed methodology makes a separate decision of biopsy for each patient at each follow-up visit on the basis of finer measures such as patient specific underlying instantaneous PSA value, PSA velocity, probability of having DRE larger than level T1c, and time of the latest biopsy. Our method combines the aforementioned measures into a patient and visit specific cancer progression risk function. It schedules a biopsy if the risk of cancer progression crosses a certain threshold. We compared our approach with the existing annual and PRIAS schedules, by conducting a realistic and extensive simulation study, for a 10 year follow-up period.
 
-In the simulation study we found that the patients who never obtain cancer progression in the 10 year follow-up incur much burden due to currently used schedules. The PRIAS schedule, despite its effort to identify such patients using PSA doubling time, schedules a minimum of 4 biopsies and a median of 6 unnecessary biopsies for such patients. The annual schedule performs even worse by scheduling 10 unnecessary biopsies. In contrast, the personalized schedules that we proposed reduce it to a median of 3 to 4 biopsies depending upon the choice of the risk threshold. The choice of the risk threshold is also important. A low risk threshold such as 5\% risk may seem attractive to detect cancer progressions in time. However, it can work as worse as annual schedule in most situations, by scheduling unnecessary biopsies. A better idea is to either use a higher risk threshold or to automatically select it (see \hyperref[sec:methods]{Methods}). The personalized approach based on automatically chosen thresholds has the advantage of being generic for use in other active surveillance programs. In addition, it inherently accounts for the time-varying prevalence of cancer progression in AS patients over the follow-up period.
+In the simulation study we found that the patients who never obtain cancer progression in the 10 year follow-up incur much burden due to currently used schedules. The PRIAS schedule, despite its effort to identify such patients using PSA doubling time, schedules a minimum of 4 biopsies and a median of 6 unnecessary biopsies for such patients. The annual schedule performs even worse by scheduling 10 unnecessary biopsies. In contrast, the personalized schedules that we proposed reduce it to a median of 2 to 3 biopsies depending upon the choice of the risk threshold. The choice of the risk threshold is also important. A low risk threshold such as 5\% risk may seem attractive to detect cancer progressions in time. However, it can schedule as many biopsies as annual schedule does. An alternative is to either use a higher risk threshold or to automatically select it (see \hyperref[sec:methods]{Methods}). The personalized approach based on automatically chosen thresholds is useful when the manual choice of a risk thresholds is dilemmatic. Since it obtains thresholds from the observed data of patients, it is generic for usage in other scheduling applications.
 
-For patients with faster and intermediate speed of cancer progression, we found in our simulation study that the personalized approach with automatically chosen threshold conducts less biopsies than the PRIAS schedule but still leads to a similar delay in detection of cancer progression. For slow, intermediate, and fast progressing patients combined, the aforementioned personalized approach schedules 3.75 biopsies before detecting a cancer progression. The personalized approach using 15\% risk schedules only 3 biopsies in total. These numbers are similar to the number of biopsies patients agree to undergo in PRIAS, if the non-compliance rates \cite{bokhorst2015compliance} are also accounted in the PRIAS schedule. Hence the personalized approach for biopsies better balances the number of biopsies per detected progression compared to the existing PRIAS and annual schedules.
+On average the the personalized biopsy approach which uses 15\% risk threshold, schedules only 3 biopsies per person than the 4.5 scheduled by PRIAS schedule. However, on average the personalized approach (15\% risk) exceeds the delay in detection of cancer progression due to PRIAS schedule by only 3.4 months. The 3 biopsies that personalized approach schedules matches the number of biopsies patients agree to undergo in PRIAS, if the non-compliance rates \cite{bokhorst2015compliance} are also accounted for. Hence the personalized approach for biopsies better balances the number of biopsies per detected progression compared to the existing PRIAS and annual schedules.
 
-However, a limitation of our approach is that at any given follow-up visit it cannot guarantee the total number of future biopsies required to detect cancer progression. This is due to the fact that the cancer progression cannot be foreseen with 100\% accuracy. Hence, attempts to create an entire optimal schedule may not always work. Instead, such a guarantee can be given with a certain probability (see Figure~\ref{fig:sim_res_combined}). For example, if a 90\% surety is required on the delay in detection of cancer progression being less than or equal to two years, then the personalized schedule with automatically chosen risk threshold schedules the least number of biopsies on average. Urologists may also choose a personalized biopsy approach suitable to patients with a certain speed of progression, if it is known in advance. In order to aid urologists in biopsy decision making process, we have developed a web application (examples included), hosted at \url{www.<insert-name-here>.com}.
+A limitation of our approach however, is that at any given follow-up visit it cannot guarantee the total number of future biopsies required to detect cancer progression. This is due to the fact that the cancer progression cannot be foreseen with 100\% accuracy. Hence, attempts to create an entire optimal schedule may not always work. Instead, such a guarantee can be given with a certain probability (see Figure~\ref{fig:sim_res_combined}). For example, if a 90\% surety is required on the delay in detection of cancer progression being less than or equal to two years, then the personalized schedule with automatically chosen risk threshold schedules the least number of biopsies on average. Urologists may also choose a personalized biopsy approach suitable to patients with a certain speed of progression, if it is known in advance. In order to aid urologists in biopsy decision making process, we have developed a web application (examples included), hosted at \url{www.<insert-name-here>.com}.
  
 
