--- a/report/decision_analytic/mdm/latex/supplementary.tex
+++ b/report/decision_analytic/mdm/latex/supplementary.tex
@@ -56,13 +56,13 @@
 
 
 \begin{document}
-\title{\textbf{Supplementary Materials for ``Personalized Decision Making for Prostate Cancer Biopsies in Active Surveillance Programs''}}
+\title{\textbf{Supplementary Materials for ``Personalized Decision Making for Biopsies in Prostate Cancer Active Surveillance Programs''}}
 
-\author[1,*]{\normalsize Auth or}
-\author[2]{Aut hor}
-\author[3]{A uthor}
-\author[2,4]{Au thor}
-\author[1]{Autho r}
+\author[1,*]{\normalsize Anirudh Tomer}
+\author[2]{Daan Nieboer}
+\author[3]{Monique J. Roobol}
+\author[2,4]{Ewout W. Steyerberg}
+\author[1]{Dimitris Rizopoulos}
 \affil[1]{Department of Biostatistics, Erasmus University Medical Center, the Netherlands}
 \affil[2]{Department of Public Health, Erasmus University Medical Center, the Netherlands}
 \affil[3]{Department of Urology, Erasmus University Medical Center, the Netherlands}
