--- a/report/decision_analytic/mdm/latex/supplementary/prias_param_estimates.tex
+++ b/report/decision_analytic/mdm/latex/supplementary/prias_param_estimates.tex
@@ -5,20 +5,20 @@
 The posterior parameter estimates for the joint model we fitted to the PRIAS dataset are shown in Table~\ref{tab:DRE_long} (longitudinal sub-model for DRE outcome), Table~\ref{tab:PSA_long} (longitudinal sub-model for PSA outcome) and Table~\ref{tab:DRE_PSA_survival} (relative risk sub-model), and parameter estimates for the variance-covariance matrix $\boldsymbol{D}$ from the longitudinal sub-model are shown in the following Table~\ref{tab:D_matrix}:
 \begin{table}[!htb]
 \begin{center}
-\caption{Estimated variance-covariance matrix $\boldsymbol{D}$ of the random effects ${\boldsymbol{b}=(b_{01},b_{11},b_{02}, b_{12}, b_{22}, b_{32}, b_{42})}$ (see \ref{subsec:model_def}) from the joint model fitted to the PRIAS dataset. The variances of the random effects are highlighted along the diagonal of the variance-covariance matrix.}
+\caption{Estimated variance-covariance matrix $\boldsymbol{D}$ of the random effects ${\boldsymbol{b}=(b_{0d},b_{1d},b_{0p}, b_{1p}, b_{2p}, b_{3p}, b_{4p})}$ (see \ref{subsec:model_def}) from the joint model fitted to the PRIAS dataset. The variances of the random effects are highlighted along the diagonal of the variance-covariance matrix.}
 \label{tab:D_matrix}
 \begin{tabular}{lrrrrrrr}
 \Hline
-Random Effects    & $b_{01}$    & $b_{11}$    & $b_{02}$    & $b_{12}$   & $b_{22}$   & $b_{32}$   & $b_{42}$    \\
+Random Effects    & $b_{0d}$    & $b_{1d}$    & $b_{0p}$    & $b_{1p}$   & $b_{2p}$   & $b_{3p}$   & $b_{4p}$    \\
 \hline
-$b_{01}$ & \cellcolor{black}\textcolor{white}{7.546}  & -0.564 & -0.182 & 0.075 & 0.084 & 0.003 & -0.019 \\
-$b_{11}$ & -0.564 & \cellcolor{black}\textcolor{white}{1.379}  & 0.081  & 0.119 & 0.165 & 0.266 & 0.219  \\
+$b_{0d}$ & \cellcolor{black}\textcolor{white}{7.546}  & -0.564 & -0.182 & 0.075 & 0.084 & 0.003 & -0.019 \\
+$b_{1d}$ & -0.564 & \cellcolor{black}\textcolor{white}{1.379}  & 0.081  & 0.119 & 0.165 & 0.266 & 0.219  \\
 \hline
-$b_{02}$ & -0.182 & 0.081  & \cellcolor{black}\textcolor{white}{0.208}  & 0.031 & 0.034 & 0.068 & 0.014  \\
-$b_{12}$ & 0.075  & 0.119  & 0.031  & \cellcolor{black}\textcolor{white}{0.224} & 0.109 & 0.158 & 0.088  \\
-$b_{22}$ & 0.084  & 0.165  & 0.034  & 0.109 & \cellcolor{black}\textcolor{white}{0.293} & 0.324 & 0.238  \\
-$b_{32}$ & 0.003  & 0.266  & 0.068  & 0.158 & 0.324 & \cellcolor{black}\textcolor{white}{0.480} & 0.312  \\
-$b_{42}$ & -0.019 & 0.219  & 0.014  & 0.088 & 0.238 & 0.312 & \cellcolor{black}\textcolor{white}{0.290}  \\
+$b_{0p}$ & -0.182 & 0.081  & \cellcolor{black}\textcolor{white}{0.208}  & 0.031 & 0.034 & 0.068 & 0.014  \\
+$b_{1p}$ & 0.075  & 0.119  & 0.031  & \cellcolor{black}\textcolor{white}{0.224} & 0.109 & 0.158 & 0.088  \\
+$b_{2p}$ & 0.084  & 0.165  & 0.034  & 0.109 & \cellcolor{black}\textcolor{white}{0.293} & 0.324 & 0.238  \\
+$b_{3p}$ & 0.003  & 0.266  & 0.068  & 0.158 & 0.324 & \cellcolor{black}\textcolor{white}{0.480} & 0.312  \\
+$b_{4p}$ & -0.019 & 0.219  & 0.014  & 0.088 & 0.238 & 0.312 & \cellcolor{black}\textcolor{white}{0.290}  \\
 \hline
 \end{tabular}
 \end{center}
